Uprava kontroleru kontaktu, dalsi mensi upravy